Fixes caused by offscreen entry renderer.

--- a/src/main/resources/com/trsst/ui/site/ui.css
+++ b/src/main/resources/com/trsst/ui/site/ui.css
@@ -1918,9 +1918,6 @@ body.page-entry article {
 	left: 50%;
 	margin-left: -25%;
 }
-body.page-entry.pending article {
-	display: none;
-}
 
 body.page-entry .profile-renderer {
 	display: none;
